--- a/games/png-vs-jpg.html
+++ b/games/png-vs-jpg.html
@@ -41,6 +41,20 @@
             font-size: 1rem;
         }
 
+        .game-wrapper {
+            display: none;
+            /* Hidden by default, shown when game starts */
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            flex-grow: 1;
+        }
+
+        .game-wrapper.active {
+            display: flex;
+        }
+
         .game-container {
             display: flex;
             flex-direction: row;
@@ -126,7 +140,8 @@
             margin-bottom: 30px;
         }
 
-        button.next-btn {
+        button.next-btn,
+        button.menu-btn {
             padding: 15px 40px;
             font-size: 1.5rem;
             background: white;
@@ -135,10 +150,37 @@
             border-radius: 50px;
             cursor: pointer;
             font-weight: bold;
-            transition: transform 0.1s;
+            transition: transform 0.1s, background-color 0.2s;
+            margin: 10px;
         }
 
-        button.next-btn:active {
+        button.menu-btn {
+            width: 250px;
+        }
+
+        button.menu-btn.easy {
+            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+            color: white;
+            border: 2px solid transparent;
+        }
+
+        button.menu-btn.normal {
+            background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
+            color: #1a1a1a;
+        }
+
+        button.menu-btn.hard {
+            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            color: white;
+        }
+
+        button.menu-btn.classic {
+            background: white;
+            color: black;
+        }
+
+        button.next-btn:active,
+        button.menu-btn:active {
             transform: scale(0.95);
         }
 
@@ -151,6 +193,25 @@
             padding: 10px 20px;
             border-radius: 20px;
             backdrop-filter: blur(5px);
+            display: none;
+            /* Hidden on menu */
+        }
+
+        .score-board.active {
+            display: block;
+        }
+
+        .main-menu {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            width: 100%;
+        }
+
+        .main-menu.hidden {
+            display: none;
         }
 
         @keyframes popIn {
@@ -175,12 +236,15 @@
             .image-choice {
                 width: 100%;
                 aspect-ratio: auto;
-                /* Let height adapt */
                 max-height: 40vh;
             }
 
             h1 {
                 font-size: 1.5rem;
+            }
+
+            button.menu-btn {
+                width: 80%;
             }
         }
 
@@ -208,17 +272,31 @@
 
 <body>
 
-    <div class="score-board">Score: <span id="score">0</span></div>
+    <div class="score-board" id="score-board">Score: <span id="score">0</span></div>
 
-    <h1>PNG vs JPG</h1>
-    <p class="subtitle">Click the higher quality (PNG) image.</p>
+    <!-- Main Menu -->
+    <div class="main-menu" id="main-menu">
+        <h1>PNG vs JPG</h1>
+        <p class="subtitle">Can you tell the difference?</p>
 
-    <div class="game-container">
-        <div class="image-choice" id="choice-1" onclick="handleChoice(1)">
-            <div class="spinner"></div>
-        </div>
-        <div class="image-choice" id="choice-2" onclick="handleChoice(2)">
-            <div class="spinner"></div>
+        <button class="menu-btn easy" onclick="startGame('easy')">Easy</button>
+        <button class="menu-btn normal" onclick="startGame('normal')">Normal</button>
+        <button class="menu-btn hard" onclick="startGame('hard')">Hard</button>
+        <button class="menu-btn classic" onclick="startGame('classic')">Classic (Random)</button>
+    </div>
+
+    <!-- Game Area -->
+    <div class="game-wrapper" id="game-wrapper">
+        <h1>PNG vs JPG</h1>
+        <p class="subtitle">Click the higher quality (PNG) image.</p>
+
+        <div class="game-container">
+            <div class="image-choice" id="choice-1" onclick="handleChoice(1)">
+                <div class="spinner"></div>
+            </div>
+            <div class="image-choice" id="choice-2" onclick="handleChoice(2)">
+                <div class="spinner"></div>
+            </div>
         </div>
     </div>
 
@@ -226,6 +304,10 @@
         <div class="feedback-icon" id="feedback-icon"></div>
         <div class="feedback-text" id="feedback-text"></div>
         <button class="next-btn" onclick="nextRound()">Next Round</button>
+        <br>
+        <button class="next-btn"
+            style="font-size: 1rem; padding: 10px 20px; background: transparent; color: white; border: 1px solid white;"
+            onclick="showMenu()">Main Menu</button>
     </div>
 
     <!-- Hidden canvas for compression -->
@@ -249,6 +331,7 @@
         let correctSide = 0; // 1 or 2
         let currentImageName = '';
         let isProcessing = false;
+        let currentDifficulty = 'classic'; // 'easy', 'normal', 'hard', 'classic'
 
         const container1 = document.getElementById('choice-1');
         const container2 = document.getElementById('choice-2');
@@ -257,6 +340,28 @@
         const feedbackText = document.getElementById('feedback-text');
         const canvas = document.getElementById('compressor');
         const ctx = canvas.getContext('2d');
+        const mainMenu = document.getElementById('main-menu');
+        const gameWrapper = document.getElementById('game-wrapper');
+        const scoreBoard = document.getElementById('score-board');
+
+        function startGame(difficulty) {
+            currentDifficulty = difficulty;
+            score = 0;
+            document.getElementById('score').textContent = score;
+
+            mainMenu.classList.add('hidden');
+            gameWrapper.classList.add('active');
+            scoreBoard.classList.add('active');
+
+            nextRound(); // Start the first round
+        }
+
+        function showMenu() {
+            feedbackOverlay.classList.remove('active');
+            gameWrapper.classList.remove('active');
+            scoreBoard.classList.remove('active');
+            mainMenu.classList.remove('hidden');
+        }
 
         function getRandomBird() {
             return birdImages[Math.floor(Math.random() * birdImages.length)];
@@ -279,10 +384,19 @@
             // Draw image to canvas
             ctx.drawImage(img, 0, 0);
 
-            // Export as low quality JPG
-            // Quality 0.1 gives visible artifacts usually, but depends on image
-            // Maybe randomize quality slightly to vary difficulty?
-            const quality = 0.05 + Math.random() * 0.15; // 0.05 to 0.2
+            let quality;
+
+            if (currentDifficulty === 'easy') {
+                quality = 0.1;
+            } else if (currentDifficulty === 'normal') {
+                quality = 0.4;
+            } else if (currentDifficulty === 'hard') {
+                quality = 0.85;
+            } else {
+                // Classic / Random
+                quality = 0.05 + Math.random() * 0.15; // 0.05 to 0.2
+            }
+
             return canvas.toDataURL('image/jpeg', quality);
         }
 
@@ -320,7 +434,6 @@
                 }
 
                 // Wait for both to be ready (src set is fast for dataURL, but good to be safe)
-                // For the file path one we might need to wait for load? actually we already loaded it once.
 
                 container1.innerHTML = '';
                 container1.appendChild(img1);
@@ -332,6 +445,11 @@
 
             } catch (err) {
                 console.error("Failed to load image", err);
+                // If main menu is not hidden, we shouldn't act, but startGame hides it first.
+                // Just in case:
+                if (!mainMenu.classList.contains('hidden')) {
+                    return;
+                }
                 // Try another one
                 nextRound();
             }
@@ -351,14 +469,10 @@
             } else {
                 feedbackIcon.textContent = '✗';
                 feedbackText.textContent = 'Wrong!';
-                // score = 0; // Optional: reset score on fail? Or just keep going
             }
 
             document.getElementById('score').textContent = score;
         }
-
-        // Start game
-        nextRound();
 
     </script>
 </body>
